# testrgm

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  note.txt  out.txt  out1.txt  rgm.cpp  testrgm
